[gd_scene load_steps=4 format=3 uid="uid://2oqfqxx5b61g"]

[ext_resource type="Script" uid="uid://bhxcnt7gk30wm" path="res://scripts/enemy/enemy.gd" id="1_7k104"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_hqtel"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_sweqy"]

[node name="Enemy" type="CharacterBody3D" groups=["Enemy"]]
collision_layer = 2
collision_mask = 7
script = ExtResource("1_7k104")

[node name="Pivot" type="Node3D" parent="."]

[node name="enemyMesh" type="MeshInstance3D" parent="Pivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1435817, 0)
mesh = SubResource("CapsuleMesh_hqtel")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1513354, 0)
shape = SubResource("CapsuleShape3D_sweqy")

[node name="VisibleOnScreenNotifier3D" type="VisibleOnScreenNotifier3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.13551, 0)
aabb = AABB(-0.5229774, -1, -0.5009006, 1.0459548, 2, 1.0018013)

[node name="CheckVisibility" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Death" type="Timer" parent="."]
one_shot = true

[connection signal="screen_entered" from="VisibleOnScreenNotifier3D" to="." method="_on_visible_on_screen_notifier_3d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier3D" to="." method="_on_visible_on_screen_notifier_3d_screen_exited"]
[connection signal="timeout" from="CheckVisibility" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Death" to="." method="_on_death_timeout"]
